--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -49,7 +49,7 @@
       
                   <div class="navbar-nav ms-auto">
                         <a class="nav-link" href="/listings/new">Add New Listing</a>
-                        <% if (!currentUser) { %>
+                        <% if (!currentUser || null) { %>
                         <a class="nav-link" href="/signup"><b>Sign Up</b></a>
                         <a class="nav-link" href="/login"><b>Login</b></a>
                         <% } %>
